// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render TodoItem component correctly with active item 1`] = `
<DocumentFragment>
  <div
    class="item-container"
  >
    <h4
      class="item__content"
    >
      todo1
    </h4>
    <div
      class="item__right"
    >
      <div
        class="item__time"
      >
        52 years ago
      </div>
      <abbr
        title="Already done?"
      >
        <button
          class="item__button deactive"
          data-testid="done-button"
        >
          ✓
        </button>
      </abbr>
      <abbr
        title="Remove From List"
      >
        <button
          class="item__button remove"
          data-testid="x-button"
        >
          X
        </button>
      </abbr>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render TodoItem component correctly with unactive item 1`] = `
<DocumentFragment>
  <div
    class="item-container"
  >
    <h4
      class="item__content"
    >
      todo3
    </h4>
    <div
      class="item__right"
    >
      <div
        class="item__time"
      >
        52 years ago
      </div>
      <abbr
        title="Done 52 years ago"
      >
        <button
          class="item__button deactivated"
          disabled=""
        >
          ✓
        </button>
      </abbr>
      <abbr
        title="Remove From List"
      >
        <button
          class="item__button remove"
          data-testid="x-button"
        >
          X
        </button>
      </abbr>
    </div>
  </div>
</DocumentFragment>
`;
